--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,8 @@
     "ng-file-upload": "^12.2.12",
     "ng-file-upload-shim": "^12.2.12",
     "angular-sanitize": "^1.6.6",
-    "angular-ui-router-styles": "^1.1.0"
+    "angular-ui-router-styles": "^1.1.0",
+    "eonasdan-bootstrap-datetimepicker": "^4.17.47"
   },
   "resolutions": {
     "angular-ui-router": "^1.0.6"
